--- a/index.html
+++ b/index.html
@@ -6,33 +6,93 @@
          <!-- Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/72336adcc0.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <nav>
             <div class ="row" id="header-content">
                 <div class="col-xs-4">
                     <img class="icon" src="assets/icon2.png" alt="instagram icon">
+                    <img class="line" src="assets/line.png" alt="line">
                     <img id="logo" src="assets/ig-logo.png" alt="instagram logo">
                 </div>
                 <div class="col-xs-4">
                     <input id="search-bar" placeholder="Search">
                 </div>
                 <div class="right-icons col-xs-4">
-                    <!-- <i class="far fa-heart icon2"></i> -->
-                    <img class="icon2" src="assets/icon2.png" alt="instagram icon">
-                    <img class="icon2" src="assets/icon2.png" alt="instagram icon">
-                    <img class="icon2" src="assets/icon2.png" alt="instagram icon">
+                    <i class="far fa-compass icon2"></i>
+                    <i class="far fa-heart icon2"></i>
+                    <i class="far fa-user icon2"></i>
                 </div>
             </div>
         </nav>
         <div class="row main">
-            <div class="col-md-8" id="post">
-                <div class="photo-meta">
-                    <img class="circle-small" src="assets/user-icon.png" alt="profile picture"/>
-                    <strong class="left-space">someperson</strong>
+            <div class="col-md-8 no-padding">
+                <div id="post">
+                    <div class="photo-meta">
+                        <img class="circle-small" src="assets/user-icon.png" alt="profile picture"/>
+                        <strong class="left-space">someperson</strong>
+                    </div>
+                    <div>
+                        <img class="main-photo" src="assets/cat.png" alt="cat">
+                    </div>
+                    <div class="photo-meta">
+                        <i class="far fa-heart icon2"></i>
+                        <i class="far fa-comment icon2"></i>
+                        <i class="far fa-share-square icon2"></i>
+                        <i class="far fa-bookmark icon2 float-right"></i>
+                        <br>
+                        <div class="meta">
+                            <strong class="meta">11 likes</strong>
+                            <br>
+                            <strong>someperson</strong> My cat <span class="link">#catsoffakeinstagram</span>
+                            <br>
+                        </div>
+                        <span class="dull smaller">3 HOURS AGO</span>
+                        <hr>
+                        <div class="comment-box">
+                            <span class="dull small">Add a comment...</span>
+                            <i class="fas fa-ellipsis-h icon3 float-right"></i>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img class="main-photo" src="assets/cat.png" alt="cat">
+                <div class="suggested">
+                    <div class="photo-meta">
+                        <strong class="dull">Suggestions For You</strong>
+                        <strong class="ig-blue float-right small">See All</strong>
+                        <br>
+                        <i id="right-arrow" class="fas fa-arrow-circle-right"></i>
+                        <div class="col3 suggested center">
+                            <img class="circle-big" src="assets/icon3.png" alt="suggested icon">
+                            <br>
+                            <div class="meta2">
+                                <strong>St. Louis Blues</strong> <img class="small-icon" src="assets/verified.png" alt="verified icon">
+                                <br>
+                                <strong class="dull small">Popular</strong>
+                            </div>    
+                            <button type="button" class="btn">Follow</button>
+                        </div>
+                        <div class="col3 middle suggested center">
+                            <img class="circle-big" src="assets/icon4.png" alt="suggested icon">
+                            <br>
+                            <div class="meta2">
+                                <strong>CONAN</strong> <img class="small-icon" src="assets/verified.png" alt="verified icon">
+                                <br>
+                                <strong class="dull small">Followed by someperson</strong>
+                            </div>
+                            <button type="button" class="btn">Follow</button>
+                        </div>
+                        <div class="col3 suggested center">
+                            <img class="circle-big" src="assets/icon5.png" alt="suggested icon">
+                            <br>
+                            <div class="meta2">
+                                <strong>Mumford & S...</strong> <img class="small-icon" src="assets/verified.png" alt="verified icon">
+                                <br>
+                                <strong class="dull small">Followed by foobar1</strong>
+                            </div>
+                            <button type="button" class="btn">Follow</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4" id="sidebar">
