--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>CSE 204 - Assignment 05 Instagram Clone</title>
-         <!-- Bootstrap -->
+        <!-- Bootstrap styling -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+        <!-- Custom styling -->
         <link rel="stylesheet" href="style.css">
+        <!-- Many icons <i> icons are from FontAwesome -->
         <script src="https://kit.fontawesome.com/72336adcc0.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -17,6 +19,7 @@
                     <img id="logo" src="assets/ig-logo.png" alt="instagram logo">
                 </div>
                 <div class="col-xs-4 center">
+                    <!-- FontAwesome -->
                     <i class="fas fa-search search-icon smaller"></i>
                     <input id="search-bar" placeholder="Search">
                 </div>
